<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello</string>
    <string name="title_activity_qiblah">Hello</string>
    <string name="location_permission_message">Location permission is needed to show direction</string>
    <string name="location_permission_title">Permission Required!</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="gps_network_not_enabled">GPS network not enabled</string>
    <string name="Cancel">Cancel</string>
    <string name="prayer_times">Prayer Times</string>
    <string name="location_permission_msg">Required permission not granted, exiting</string>
    <string name="app_location_permission">Application location permission</string>
    <string name="Required_permission_not_granted_exiting">Required permission not granted, exiting</string>
    <string name="qiblahs_direction_to_your_position">Qiblah\'s direction to your position</string>
    <string name="elevation_degree">Elevation degree</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="app_name">Muslem Now</string>
    <string name="home">Home</string>
    <string name="quran">Quran</string>
    <string name="azkar">Azkar</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="duhr">Duhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="comma">\", \"</string>
    <string name="remaining_time_for">Remaining Time For </string>
    <string name="you_can_specify_your_settings_or_skip_and_add_it_later_on">You can specify your settings or skip and add it later on</string>
    <string name="language_settings">Language Settings</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="azan_settings">Azan Settings</string>
    <string name="full_azan">Full Azan</string>
    <string name="takbirat_only">Takbirat Only</string>
    <string name="azan_type">Azan Type</string>
    <string name="choose_moazen">Choose Moazen</string>
    <string name="you_can_choose_form_settings_in_the_application">You can choose form settings in the application</string>
    <string name="azkar_after_azan">Azkar After Azan</string>
    <string name="azkar_sabah_and_masaa">Azkar Sabah And Masaa</string>
    <string name="skip_now">Skip Now</string>
    <string name="meshary">Meshary</string>
    <string name="daily_azkar">Daily Azkar</string>
    <string name="reset_counter">Reset Counter</string>
    <string name="elhosary">ElHosary</string>
    <string name="qibla">Qibla</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="azkar_sabah">Azkar Sabah</string>
    <string name="choose_azkar_alarm_timing">Choose Azkar Alarm Timing</string>
    <string name="after_fajr_with_half_an_hour">After Fajr with half an hour</string>
    <string name="after_fajr_with_an_hour">After Fajr with an hour</string>
    <string name="after_fajr_with_two_hours">After Fajr with two hours</string>
    <string name="azkar_masaa">Azkar Masaa</string>

    <array name="travelreasons">
        <item name=" asdasd" />
        <item name=" asdasd" />
        <item name=" asdasd" />
        <item name=" asdasd" />
        <item name=" asdasd" />
    </array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="qibla_according_to_your_location_in_degrees">Qibla according to your location in degrees</string>
    <string name="qibla_refreshed">Qibla Refreshed</string>
    <string name="muslem_now">Muslem Now</string>
    <string name="please_open_your_gps">Please Open your GPS</string>
    <string name="couldnt_find_your_address">Couldn\'t find your address</string>
    <string name="are_you_sure_you_want_to_change_language">\"Are you sure you want to change language , \"</string>
    <string name="this_action_will_require_restart_of_the_application">this action will require restart of the application</string>
    <string name="note">\"Note : \"</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="page">Page</string>
    <string name="aya">Aya</string>
    <string name="first_juz">First Juz</string>
    <string name="second_juz">Second Juz</string>
    <string name="third_juz">Third Juz</string>
    <string name="fourth_juz">Fourth Juz</string>
    <string name="fifth_juz">Fifth Juz</string>
    <string name="sixth_juz">Sixth Juz</string>
    <string name="seventh_juz">Seventh Juz</string>
    <string name="eighth_juz">Eighth Juz</string>
    <string name="ninth_juz">Ninth Juz</string>
    <string name="tenth_juz">Tenth Juz</string>
    <string name="eleventh_juz">Eleventh Juz</string>
    <string name="twelfth_juz">Twelfth Juz</string>
    <string name="thirteenth_juz">Thirteenth Juz</string>
    <string name="fourteenth_juz">Fourteenth Juz</string>
    <string name="fifteenth_juz">Fifteenth Juz</string>
    <string name="sixteenth_juz">Sixteenth Juz</string>
    <string name="seventeenth_juz">Seventeenth Juz</string>
    <string name="eighteenth_juz">Eighteenth Juz</string>
    <string name="nineteenth_juz">Nineteenth Juz</string>
    <string name="twentieth_juz">Twentieth Juz</string>
    <string name="twentyone_juz">TwentyOne Juz</string>
    <string name="twentytwo_juz">TwentyTwo Juz</string>
    <string name="twentythree_juz">TwentyThree Juz</string>
    <string name="twenthfourth_juz">TwentyFourth Juz</string>
    <string name="twentyfifth_juz">TwentyFifth Juz</string>
    <string name="twentysixth_juz">TwentySixth Juz</string>
    <string name="twentyseventh_juz">TwentySeventh Juz</string>
    <string name="twentyeighth_juz">TwentyEighth Juz</string>
    <string name="twentyninth_juz">TwentyNinth Juz</string>
    <string name="thirty_juz">Thirtieth Juz</string>
    <string name="makkiyah">Makkiyah</string>
    <string name="madaniyah">Madaniyah</string>
    <string name="_30_full_parts">30 Full Parts</string>
    <string name="the_holy_quran">The Holy Quran</string>
    <string name="indexing">Indexing</string>
    <string name="u">\\u</string>
    <string name="choose_the_reader">Choose The Reader</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="clear_counter">Clear counter</string>
    <string name="electronic_sebha">Electronic Sebha</string>
    <string name="names_of_allah">Names Of ALlah</string>
    <string name="nearby_mosques">Nearby Mosques</string>
    <string name="radio">Radio</string>
    <string name="listen_to_our_radio_channels">Listen to our radio channels</string>
</resources>