<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="changelanguageViewModel"
            type="com.zaker.ui.settings.SettingsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="8dp"
        android:minWidth="250dp"
        android:background="@drawable/view_background_buttons_green_gradient_rounded">

        <TextView
            android:id="@+id/tvDialogChangeLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/are_you_sure_you_want_to_change_language"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvDialogChangeLanguage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/this_action_will_require_restart_of_the_application"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvDialogChangeLanguage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/rounded_white"
                android:text="@string/yes"
                android:textColor="@color/backgroundGreen"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/tvDialogChangeLanguage2"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/rounded_white"
                android:text="@string/cancel"
                android:textColor="@color/backgroundGreen"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDialogChangeLanguage2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>